Optional Author & Adding ACF to single posts

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -15,6 +15,9 @@
     display: none;
 }
 
+//hiding post author
+p.byline.author { display: none; }
+
 .title-bar {    
     @include breakpoint(medium) {
         display: none;
