Adding search on mobile. Smaller email addresses (People)

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -9,6 +9,7 @@ body.post-type-archive-events {
     position: relative;
     border-bottom: 1px solid #cccccc;
     background: $header-beige;
+    height: 182px;
 }
 
 .filter-area {
