--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -138,6 +138,13 @@ div#search-toggle {
     }
 }
 
+@include breakpoint(small){
+	.for-large {
+		display: none;
+	}
+}
+
+
 //MEDIA QUERIES
 @include breakpoint(medium up){
 	div#search-toggle {
