People blocks sizing

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -284,6 +284,7 @@ body.post-type-archive-artists {
   		margin-bottom: 2.5px;
   		a {
   			padding: 0.85em 0.5em;
+  			font-size: 10px;
   		}
   	}
   }
