--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -10001,7 +10001,8 @@ body.post-type-archive-artists li.cat-item-all a {
       margin-right: 2.5px;
       margin-bottom: 2.5px; }
       ul.artist-categories li a {
-        padding: 0.85em 0.5em; }
+        padding: 0.85em 0.5em;
+        font-size: 10px; }
   h2.hero-heading {
     font-size: 2rem; } }
 
