External links plugin, People emails, Enhanced Media Library plugin

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -145,6 +145,12 @@ body.blog {
  	}
  }
 
+.large-item {
+	.magazine-item .magazine-item-thumb {
+		height: 300px;
+	}
+}
+
 
 //************************
 //Single Magazine pages **
