Artist Intro made 50% width

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -138,7 +138,7 @@ div#search-toggle {
     }
 }
 
-@include breakpoint(small){
+@include breakpoint(small only){
 	.for-large {
 		display: none;
 	}
