--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9797,8 +9797,9 @@ div#search-toggle {
   .input-group input#searchsubmit {
     background-color: #BA0C2F; }
 
-.for-large {
-  display: none; }
+@media screen and (max-width: 39.9375em) {
+  .for-large {
+    display: none; } }
 
 @media screen and (min-width: 40em) {
   div#search-toggle {
