--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
@@ -3,20 +3,28 @@
 ul.single-page-nav {
     list-style-type: none;
     display: flex;
-    background: $red;
+    background: $white;
     margin-left: 0;
     height: 60px;
     position: relative;
+    border-bottom: 1px solid #cccccc;
+    border-top: 1px solid #cccccc;
     
     li {
     	padding: 0 $sitepadding;
-    	color: white;
+    	color: #808080;
         line-height: 60px;
+
     	a {
-    		color: white;
+    		color: #808080;
     		font-weight: bold;
     	}
     }
+
+    li.single-page-nav_link.active a {
+        color: $red !important;
+    }
+
 }
 
 //styles for sticking nav after scroll
