--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -39,7 +39,7 @@ header#masthead {
 	//social-icons
 	.social-icon {
 	    color: black;
-	    padding: 0 15px;
+	    padding: 0 7px;
 	}
 	i.fa-2x {
 	    font-size: 1.3em;
@@ -83,12 +83,13 @@ nav#site-navigation {
 div#search-toggle {
 	transition: 0.5s;
 	background-color: transparent;
-	height: 50px;
-	position: absolute;
+	height: 30px;
 	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
+	margin-bottom: 0;
+	padding: 0 10px;
+	// -webkit-transform: translateY(-50%);
+	// -ms-transform: translateY(-50%);
+	// transform: translateY(-50%);
 	right: 0;
 	svg {
 	    vertical-align: bottom;
@@ -100,6 +101,15 @@ div#search-toggle {
     width: auto;
     margin: 0 auto;
     text-align: center;
+    position: absolute;
+    right: 0;
+    top: 30px;
+}
+
+.post-type-archive-events {
+	article {
+	    margin: 0;
+	}
 }
 
 .menu .active > a {
@@ -148,7 +158,7 @@ div#search-toggle {
 //MEDIA QUERIES
 @include breakpoint(medium up){
 	div#search-toggle {
-		@include center (y);
+		//@include center (y);
 		right: 0;
 	}
 	.top-bar .menu li:not(:last-child) {
@@ -248,6 +258,9 @@ div#search-toggle {
 //Removing Social area and search overlap
 @media screen and (max-width: 1175px) {
 	.header-social-area {
+		//display: none;
+	}
+	a.social-button {
 		display: none;
 	}
 }
