--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9731,7 +9731,7 @@ header#masthead {
     height: 40px; }
   header#masthead .social-icon {
     color: black;
-    padding: 0 15px; }
+    padding: 0 7px; }
   header#masthead i.fa-2x {
     font-size: 1.3em; }
   header#masthead .header-social-area.show-for-medium {
@@ -9759,12 +9759,10 @@ div#search-toggle {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   background-color: transparent;
-  height: 50px;
-  position: absolute;
+  height: 30px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  margin-bottom: 0;
+  padding: 0 10px;
   right: 0; }
   div#search-toggle svg {
     vertical-align: bottom; }
@@ -9772,7 +9770,13 @@ div#search-toggle {
 .header-social-area {
   width: auto;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  position: absolute;
+  right: 0;
+  top: 30px; }
+
+.post-type-archive-events article {
+  margin: 0; }
 
 .menu .active > a {
   color: #BA0C2F;
@@ -9803,11 +9807,6 @@ div#search-toggle {
 
 @media screen and (min-width: 40em) {
   div#search-toggle {
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
     right: 0; }
   .top-bar .menu li:not(:last-child) {
     border-right: none; }
@@ -9851,7 +9850,7 @@ div#search-toggle {
     z-index: 1; } }
 
 @media screen and (max-width: 1175px) {
-  .header-social-area {
+  a.social-button {
     display: none; } }
 
 .filtering-block {
@@ -17334,6 +17333,9 @@ button.button {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
+
+.post-type-archive-events article {
+  margin: 0; }
 
 .events-map {
   min-height: 50vh;
