Home page video fix

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -53,8 +53,6 @@
 			color: $red;
 		}
 	}
-
-
 }
 
 
@@ -214,6 +212,16 @@ div#video-audio {
 		display: block;
 	}
 }
+
+//Home page video section
+div#video-audio {
+	.artist-video-area {
+		p {
+		    margin-bottom: 0;
+		}
+	}
+}
+
 
 
 //Load more button styles
