Changing Filters for new dropdown functionality

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
@@ -96,6 +96,14 @@ body.post-type-archive-online {
 	}
 }
 
+//Main Online Pgae heder hiding
+
+.post-type-archive-online {
+	.hero-heading.no-show {
+		display: none;
+	}
+}
+
 //************************
 //Single online pages **
 //************************
