Multiple names on Online Item

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
@@ -13,6 +13,11 @@
 		color: inherit;
 	}
 
+	span.online-artist-name {
+	    text-transform: uppercase;
+	    font-size: 85%;
+	}
+
 	.bottom-left {
 		position: absolute;
 		bottom: 0;
