--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -11402,6 +11402,9 @@ div#image-gallery div.gallery-image {
   margin-bottom: 25px; }
   .online-item a {
     color: inherit; }
+  .online-item span.online-artist-name {
+    text-transform: uppercase;
+    font-size: 85%; }
   .online-item .bottom-left {
     position: absolute;
     bottom: 0; }
