--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
@@ -2,7 +2,9 @@
 
 //SINGLE ONLINE STREAMS ********************************
 
-body.single-online, body.single-post, body.single-touring-partners {
+//, body.single-touring-partners removed from next line
+
+body.single-online, body.single-post {
   article.main-content {
     max-width: 57.375rem;
     margin: 0 auto;
