Single Event Page

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-online.scss
@@ -4,7 +4,7 @@
 
 //, body.single-touring-partners removed from next line
 
-body.single-online, body.single-post {
+body.single-online, body.single-post, body.single-events {
   article.main-content {
     max-width: 57.375rem;
     margin: 0 auto;
