Adding icons to all green room items

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_magazine-single.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_magazine-single.scss
@@ -5,6 +5,7 @@
    	    list-style: none;
    	    margin-left: 0;
    	    text-transform: uppercase;
+          margin-bottom: 0;
    	}
    	a {
    		color: initial;
