--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
@@ -25,7 +25,7 @@
 			i {
 				color: white;
 				background: rgba(186, 12, 47, 0.8);
-				padding: 0.5em;
+				padding: 0.5em 0.5em 0.4em;
 				margin-bottom: 1px;
 			}
 		}
