Tours Projects, making like Artist Page

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -4,6 +4,16 @@
 //SINGLE TOURS STYLES ********************************
 //****************************************************
 
+.single-touring-partners, .single-artists {
+  div#intro {
+    h4.section-header {
+        padding: 0;
+    }
+  }
+}
+
+
+
 .single-tours-projects {
   
   .tour-hero {
