--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -166,6 +166,10 @@ div#video-audio {
 		background: $bggrey;
 		color: #ffffff;
 		padding: 1em;
+		word-break: break-word;
+		p {
+			font-size: 1.1rem;
+		}
 	}
 }
 
