--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -15,6 +15,13 @@
     display: none;
 }
 
+//temp margin bottom for video single posts. Embed previously too close to bottom
+.single-format-video {
+    .flex-video.widescreen {
+        margin-bottom: 3em;
+    }
+}
+
 //hiding post author
 p.byline.author { display: none; }
 
