Terms own page no bottom links. Single person hero

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-people.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-people.scss
@@ -19,6 +19,7 @@ body.single-people{
   .artist-header.people.container {
     height: 28em;
     @include full-bg;
+    background: $header-beige;
     position: relative;
     border-bottom: 1px solid #cccccc;
     .artist-details-area {
