--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -1,4 +1,18 @@
 // JB Nav Styles
+
+/*
+SlideUpTopBar for Foundation styles
+*/
+
+// .slideUp {
+//     position: fixed;
+//     top: 0;
+//     transition: top 0.4s ease-in-out;
+//     width: 100%;
+//     z-index: 999;
+// }
+
+
 header#masthead {
 
 	z-index: 5;
