--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9708,6 +9708,9 @@ body#tinymce {
   max-width: 84.375rem;
   padding: 1.25rem !important; }
 
+/*
+SlideUpTopBar for Foundation styles
+*/
 header#masthead {
   z-index: 5;
   border-bottom: 1px solid #cccccc; }
