--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -7428,8 +7428,8 @@ pre {
     -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
     transform: skewX(-0.78125deg) skewY(-0.78125deg); }
   77.7% {
-    -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg); }
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% {
     -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
     transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
@@ -7454,8 +7454,8 @@ pre {
     -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
     transform: skewX(-0.78125deg) skewY(-0.78125deg); }
   77.7% {
-    -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg); }
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg); }
   88.8% {
     -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
     transform: skewX(-0.19531deg) skewY(-0.19531deg); } }
@@ -10042,26 +10042,28 @@ body.post-type-archive-artists li.cat-item-all a {
   .link-banner-button {
     padding: 50px; } }
 
-ul.single-page-nav {
-  list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background: #fefefe;
-  margin-left: 0;
-  height: 60px;
-  position: relative;
+.single-page-nav--container {
   border-bottom: 1px solid #cccccc;
   border-top: 1px solid #cccccc; }
-  ul.single-page-nav li {
-    padding: 0 25px;
-    color: #808080;
-    line-height: 60px; }
-    ul.single-page-nav li a {
+  .single-page-nav--container ul.single-page-nav {
+    list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background: #fefefe;
+    margin-left: 0;
+    margin-bottom: 0;
+    height: 60px;
+    position: relative; }
+    .single-page-nav--container ul.single-page-nav li {
+      padding: 0 12.5px;
       color: #808080;
-      font-weight: bold; }
-  ul.single-page-nav li.single-page-nav_link.active a {
-    color: #BA0C2F !important; }
+      line-height: 60px; }
+      .single-page-nav--container ul.single-page-nav li a {
+        color: #808080;
+        font-weight: bold; }
+    .single-page-nav--container ul.single-page-nav li.single-page-nav_link.active a {
+      color: #BA0C2F !important; }
 
 #sticky.stick {
   margin-top: 0 !important;
