‘Read’ gone from posts. Min height on mag items

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -13,6 +13,7 @@
 
 	.magazine-item-container {
 		padding: 0 1em 1em;
+		min-height: 125px;
 		.read-more {
 			font-weight: bold;
 			color: #d7d4c5;
