Sorting Touring Partners Quick look popup

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
@@ -18,6 +18,7 @@
         	padding: 0 $sitepadding-small;
         	color: #808080;
             line-height: 60px;
+            font-size: 16px;
 
         	a {
         		color: #808080;
