--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -10058,7 +10058,8 @@ body.post-type-archive-artists li.cat-item-all a {
     .single-page-nav--container ul.single-page-nav li {
       padding: 0 12.5px;
       color: #808080;
-      line-height: 60px; }
+      line-height: 60px;
+      font-size: 16px; }
       .single-page-nav--container ul.single-page-nav li a {
         color: #808080;
         font-weight: bold; }
