--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -17284,6 +17284,23 @@ svg.artist-circle {
 path.crescent {
   fill: #FBFAF6; }
 
+.image-curve {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  position: absolute;
+  top: 34%;
+  /* top: 0; */
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  height: 100%;
+  left: -243px;
+  /* right: 0; */
+  width: 60%;
+  transform: translateY(-50%); }
+
 .more-page-links {
   border-top: 1px solid #cccccc;
   text-align: center;
