EVENTS ARCHIVE - form style tweaks

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_events-filtering-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_events-filtering-bar.scss
@@ -6,9 +6,13 @@
     
     
     .inline-label{
-        float:left;
+        float:right;
     }
-    
+    @media #{$small-only} {
+        .inline-label{
+            float:left;
+        }    
+    }
     
     
     #date_type, input{
