--- a/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
@@ -78,10 +78,10 @@ div.side-bar-text-area {
 //New Artist Header Styles
 .artist-hero-image {
 	padding-left: 0;
-	//position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
+	position: relative;
 	//max-height: 28em; //temp
 	overflow: hidden; //temp
 	svg {
@@ -125,7 +125,8 @@ body.single-touring-partners {
 .artist-header-thumb {
 	@include full-bg;
 	height: 450px;
-	width: 60%;
+	width: 70%;
+	//position: relative;
 }
 
 svg.artist-circle {
@@ -143,15 +144,11 @@ path.crescent {
 
 
 .image-curve {
-	// /@include center(y);
 	position: absolute;
-    top: 34%;
-    /* top: 0; */
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    height: 100%;
-    left: -243px;
-    /* right: 0; */
-    width: 60%;
-    transform: translateY(-50%);
+	left: 0;
+	top: 0;
+	height: 450px;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-position: right 0;
 }
