--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -17265,6 +17265,7 @@ div.side-bar-text-area {
   top: 0;
   bottom: 0;
   left: 0;
+  position: relative;
   overflow: hidden; }
   .artist-hero-image svg {
     top: 0;
@@ -17300,7 +17301,7 @@ body.single-touring-partners .artist-header.container {
   -webkit-background-size: cover;
   background-size: cover;
   height: 450px;
-  width: 60%; }
+  width: 70%; }
 
 svg.artist-circle {
   height: 100%;
@@ -17314,15 +17315,12 @@ path.crescent {
 
 .image-curve {
   position: absolute;
-  top: 34%;
-  /* top: 0; */
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  height: 100%;
-  left: -243px;
-  /* right: 0; */
-  width: 60%;
-  transform: translateY(-50%); }
+  left: 0;
+  top: 0;
+  height: 450px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: right 0; }
 
 .more-page-links {
   border-top: 1px solid #cccccc;
