--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -17247,6 +17247,28 @@ body.single.single-artists .enquiry-button, body.single.single-clients .enquiry-
   body.single.single-artists .enquiry-button a, body.single.single-clients .enquiry-button a, body.single-touring-partners .enquiry-button a {
     color: #ffffff; }
 
+@media screen and (max-width: 39.9375em) {
+  body.single.single-artists .artist-header.container, body.single.single-clients .artist-header.container, body.single-touring-partners .artist-header.container {
+    height: 225px; }
+    body.single.single-artists .artist-header.container .artist-hero-image, body.single.single-clients .artist-header.container .artist-hero-image, body.single-touring-partners .artist-header.container .artist-hero-image {
+      height: 225px;
+      padding-left: 0;
+      padding-right: 0; }
+      body.single.single-artists .artist-header.container .artist-hero-image .artist-header-thumb, body.single.single-clients .artist-header.container .artist-hero-image .artist-header-thumb, body.single-touring-partners .artist-header.container .artist-hero-image .artist-header-thumb {
+        height: 225px;
+        width: 100%; }
+        body.single.single-artists .artist-header.container .artist-hero-image .artist-header-thumb .image-curve, body.single.single-clients .artist-header.container .artist-hero-image .artist-header-thumb .image-curve, body.single-touring-partners .artist-header.container .artist-hero-image .artist-header-thumb .image-curve {
+          display: none; } }
+
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+  body.single.single-artists .artist-header.container .artist-hero-image .artist-header-thumb, body.single.single-clients .artist-header.container .artist-hero-image .artist-header-thumb, body.single-touring-partners .artist-header.container .artist-hero-image .artist-header-thumb {
+    width: 80%; }
+    body.single.single-artists .artist-header.container .artist-hero-image .artist-header-thumb .image-curve, body.single.single-clients .artist-header.container .artist-hero-image .artist-header-thumb .image-curve, body.single-touring-partners .artist-header.container .artist-hero-image .artist-header-thumb .image-curve {
+      width: 53%;
+      background-repeat: no-repeat;
+      background-position: initial;
+      right: 0; } }
+
 div.side-bar-text-area {
   margin-top: 25px; }
   div.side-bar-text-area p {
@@ -17317,7 +17339,7 @@ path.crescent {
 
 .image-curve {
   position: absolute;
-  left: 0;
+  right: 0;
   top: 0;
   height: 450px;
   width: 100%;
